--- a/mixspace/templates/music/log_in.html
+++ b/mixspace/templates/music/log_in.html
@@ -22,5 +22,5 @@
         {{ form.captcha }}
         <button type="submit" class="btn btn-outline-primary submit log-in-btn captcha" name="logIn">Log in</button>
     </form>
-    <p class="sign-up-redirect">Don't have account yet? <a id="login-to-redirect-btn" href="{% url 'sign_up' %}">Sign up</a> then!</p>
+    <p class="sign-up-redirect">Don't have an account yet? <a id="login-to-redirect-btn" href="{% url 'sign_up' %}">Sign up</a>!</p>
 {% endblock %}
