--- a/mixspace/templates/music/index.html
+++ b/mixspace/templates/music/index.html
@@ -16,50 +16,5 @@
     {% include 'music/include/tracks.html' %}
 
 
-    <nav class="pagination-parent">
-        <ul class="pagination justify-content-center">
-            {% if page_obj.has_previous %}
-                <li class="page-item">
-                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
-                </li>
-                <li class="page-item">
-                    <a class="page-link" href="?page=1">1</a>
-                </li>
-            {% else %}
-                <li class="page-item disabled">
-                    <a class="page-link" href="#">Previous</a>
-                </li>
-                <li class="page-item active">
-                    <a class="page-link" href="?page=1">1</a>
-                </li>
-            {% endif %}
-            {% if page_obj.has_previous and page_obj.has_next %}
-                <li class="page-item active">
-                    <a class="page-link" href="?page={{ page_obj.number }}">{{ page_obj.number }}</a>
-                </li>
-            {% endif %}
-
-            {% if page_obj.has_next %}
-                <li class="page-item">
-                    <a class="page-link"
-                    href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a>
-                </li>
-                <li class="page-item">
-                    <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
-                </li>
-            {% elif page_obj.paginator.num_pages is 1 %}
-                <li class="page-item disabled">
-                    <a class="page-link" href="#">Next</a>
-                </li>
-            {% else %}
-                <li class="page-item active">
-                    <a class="page-link"
-                    href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a>
-                </li>
-                <li class="page-item disabled">
-                    <a class="page-link" href="#">Next</a>
-                </li>
-            {% endif %}
-        </ul>
-    </nav>
+    {% include 'music/include/pagination.html' %}
 {% endblock %}
