update player view, layout.html, player.html

--- a/mixspace/templates/music/layout.html
+++ b/mixspace/templates/music/layout.html
@@ -71,7 +71,7 @@
         {% block body %}
         {% endblock %}
         <footer>
-            <p><small>Copyrights © <a href="https://github.com/MateuszMasternak" class="github-redirect">Mateusz Masternak</a> 2022</small>.</p>
+            <p><small>Made by <a href="https://github.com/MateuszMasternak" class="github-redirect">Mateusz Masternak</a></small>.</p>
         </footer>
         <script src="{% static 'music/js/menu.js' %}"></script>
         <script src="{% static 'music/js/cards.js' %}"></script>
