--- a/mixspace/templates/music/player.html
+++ b/mixspace/templates/music/player.html
@@ -23,35 +23,42 @@
                         <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4 8a4 4 0 1 0 8 0 4 4 0 0 0-8 0z"/>
                     </svg>
                 </div>
-                <h2 class="track-title-player">{{ track.title }}</h2>
-                <h3 class="track-artist-player"><a class="track-artist-player" href="{% url 'user' username=track.artist %}">{{track.artist}}</a></h3>
+                {% if track %}
+                    <h2 class="track-title-player">{{ track.title }}</h2>
+                    <h3 class="track-artist-player"><a class="track-artist-player" href="{% url 'user' username=track.artist %}">{{track.artist}}</a></h3>
+                {% else %}
+                    <h2 class="track-title-player">{{ error }}</h2>
+                {% endif %}
             </div>
-            <form method="post" action="{% url 'like' id=track.id %}" id="likeForm-player" class="d-flex">
-                {% csrf_token %}
-                <p id="trackId" hidden>{{ track.id }}</p>
-                <div id="heart">
-                    {% if user.is_authenticated %}
-                        {% if user not in track.like.all %}
-                            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16" id="likeButton">
+            {% if track %}
+                <form method="post" action="{% url 'like' id=track.id %}" id="likeForm-player" class="d-flex">
+                    {% csrf_token %}
+                    <p id="trackId" hidden>{{ track.id }}</p>
+                    <div id="heart">
+                        {% if user.is_authenticated %}
+                            {% if user not in track.like.all %}
+                                <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16" id="likeButton">
+                                    <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
+                                </svg>
+                            {% else %}
+                                <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16" id="unlikeButton">
+                                    <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
+                                </svg>
+                            {% endif %}
+                        {% else %}
+                            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16" id="unactiveLikeButton">
                                 <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
                             </svg>
-                        {% else %}
-                            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16" id="unlikeButton">
-                                <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
-                            </svg>
                         {% endif %}
-                    {% else %}
-                        <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16" id="unactiveLikeButton">
-                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-                        </svg> 
-                    {% endif %}
+                    </div>
+                    <p id="likesCount-player"></p>
+                </form>
+                <div class="genre-date">
+                    <p class="track-genre">{{track.genre}}</p>
+                    <p class="track-datetime">{{track.time_added | date:"d M Y"}}, {{track.time_added | time:"H:i"}}</p>
                 </div>
-                <p id="likesCount-player"></p>
-            </form>
-            <div class="genre-date">
-                <p class="track-genre">{{track.genre}}</p>
-                <p class="track-datetime">{{track.time_added | date:"d M Y"}}, {{track.time_added | time:"H:i"}}</p>
-            </div>
+            {% endif %}
+
             <audio controls controlslist="nodownload noplaybackrate" preload="metadata">
                 <source src="{{ track.file.url }}" type="audio/wav">
                 Your browser does not support the audio element.
