--- a/mixspace/templates/music/include/tracks.html
+++ b/mixspace/templates/music/include/tracks.html
@@ -3,7 +3,7 @@
         <article class="card">
             <h2 class="track-title">{{track.title}}</h2>
             {% if user.is_authenticated and track.artist == user and 'user' in request.path %}
-            <form method="post" action="{% url 'delete' id=track.id %}" id="deleteForm">
+            <form method="post" action="{% url 'delete' pk=track.id %}" id="deleteForm">
                 {% csrf_token %}
                 <p id="trackId" hidden>{{ track.id }}</p>
                 <p id="deleteBtn">Delete</p>
@@ -11,24 +11,17 @@
             {% endif %}
             <div class="card-bottom">
                 <div class="likeFormParent">
-                    <form method="post" action="{% url 'like' id=track.id %}" id="likeForm" class="d-flex">
+                    <form method="post" action="{% url 'like' pk=track.id %}" id="likeForm" class="d-flex">
                         {% csrf_token %}
                         <p id="trackId" hidden>{{ track.id }}</p>
                         <div id="heart">
-                            {% if user.is_authenticated %}
-                                {% if user not in track.like.all %}
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16" id="likeButton">
-                                        <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-                                    </svg>
-                                {% else %}
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16" id="unlikeButton">
-                                        <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
-                                    </svg>
-                                {% endif %}
-                            {% else %}
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16" id="unactiveLikeButton">
+                            {% if not user.is_authenticated %}
+                                <svg xmlns="http://www.w3.org/2000/svg"
+                                     width="24" height="24" fill="currentColor"
+                                     class="bi bi-heart" viewBox="0 0 16 16"
+                                     id="unactiveLikeButton">
                                     <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-                                </svg> 
+                                </svg>
                             {% endif %}
                         </div>
                         <p id="likesCount"></p>
