--- a/mixspace/templates/music/upload.html
+++ b/mixspace/templates/music/upload.html
@@ -9,7 +9,7 @@
     {% include 'music/include/messages.html' %}
 
     {% if not user.is_authenticated %}
-        <p class="text-warning" id="upload-info">Only logged in users can upload files.</p>
+        <p class="text-warning" id="upload-info">Only logged-in users can upload files.</p>
     {% endif %}    
     <form method="post" action="{% url 'upload' %}" enctype="multipart/form-data" class="d-flex align-items-center flex-column p-4" id="upload-form" autocomplete="off">
         {% csrf_token %}
