--- a/mixspace/templates/music/player.html
+++ b/mixspace/templates/music/player.html
@@ -35,18 +35,18 @@
                     {% csrf_token %}
                     <p id="trackId" hidden>{{ track.id }}</p>
                     <div id="heart">
-                        {% if user.is_authenticated %}
-                            {% if user not in track.like.all %}
-                                <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16" id="likeButton">
-                                    <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-                                </svg>
-                            {% else %}
-                                <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16" id="unlikeButton">
-                                    <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
-                                </svg>
-                            {% endif %}
+                        {% if not user.is_authenticated %}
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                                 width="24" height="24" fill="currentColor"
+                                 class="bi bi-heart" viewBox="0 0 16 16"
+                                 id="unactiveLikeButton">
+                                <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
+                            </svg>
                         {% else %}
-                            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16" id="unactiveLikeButton">
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                                 width="24" height="24" fill="currentColor"
+                                 class="bi bi-heart" viewBox="0 0 16 16"
+                                 id="unspecifiedLikeButton">
                                 <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
                             </svg>
                         {% endif %}
@@ -59,7 +59,7 @@
                 </div>
             {% endif %}
 
-            <audio controls controlslist="nodownload noplaybackrate" preload="metadata">
+            <audio controls controlslist="nodownload noplaybackrate" preload="auto">
                 <source src="{{ track.file.url }}" type="audio/wav">
                 Your browser does not support the audio element.
             </audio>
