--- a/mixspace/templates/music/player.html
+++ b/mixspace/templates/music/player.html
@@ -60,7 +60,7 @@
             {% endif %}
 
             <audio controls controlslist="nodownload noplaybackrate" preload="auto">
-                <source src="{{ track.file.url }}" type="audio/wav">
+                <source src="{{ track.file.url }}" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
         </article>
