--- a/templates/core/player.html
+++ b/templates/core/player.html
@@ -1,4 +1,4 @@
-{% extends 'music/layout.html' %}
+{% extends 'core/layout.html' %}
 {% load static %}
 
 {% block title %}- music player{% endblock %}
