--- a/templates/core/upload.html
+++ b/templates/core/upload.html
@@ -1,4 +1,4 @@
-{% extends 'music/layout.html' %}
+{% extends 'core/layout.html' %}
 {% load static %}
 {% load widget_tweaks %}
 
@@ -6,7 +6,7 @@
 
 {% block body %}
     <h1 class="h1-pos">Place for your music.</h1>
-    {% include 'music/include/messages.html' %}
+    {% include 'core/include/messages.html' %}
 
     {% if not user.is_authenticated %}
         <p class="text-warning" id="upload-info">Only logged-in users can upload files.</p>
@@ -36,5 +36,5 @@
             <a class="btn btn-outline-primary submit upload-btn" type="button" id="upload-to-register-btn" href="{% url 'log_in' %}">Upload</a>
         {% endif %}
     </form>
-    <script src="{% static 'music/js/showInfo.js' %}"></script>
+    <script src="{% static 'core/js/showInfo.js' %}"></script>
 {% endblock %}
