--- a/templates/core/user_profile.html
+++ b/templates/core/user_profile.html
@@ -9,7 +9,7 @@
         <h1 class="h1-pos username-h1">{{ username | truncatechars:21 }}</h1>
         <div class="d-flex justify-content-between align-items-center">
             <div class="default-avatar" {% if username == user.username %}id="avatar"{% endif %} data-hover="Upload">
-                {% if avatar %}
+                {% if avatar is not None %}
                     <img {% if username == user.username %}id="avatarImg"{% endif %} src="{{ avatar }}" alt="" height="100px" width="100px">
                 {% endif %}    
             </div>
