--- a/templates/following.html
+++ b/templates/following.html
@@ -1,13 +1,13 @@
-{% extends 'core/layout.html' %}
+{% extends 'layout.html' %}
 {% load static %}
 
 {% block title %}- following{% endblock %}
 
 {% block body %}
     <h1 class="h1-pos">Tracks of artist you are following.</h1>
-    {% include 'core/include/tracks.html' %}
+    {% include 'include/tracks.html' %}
 
-    {% include 'core/include/pagination.html' %}
+    {% include 'include/pagination.html' %}
     
-    <script src="{% static 'core/js/cards.js' %}"></script>
+    <script src="{% static 'js/cards.js' %}"></script>
 {% endblock %}
