--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% extends 'core/layout.html' %}
+{% extends 'layout.html' %}
 {% load static %}
 
 {% block title %}- home{% endblock %}
@@ -7,14 +7,14 @@
     {% if user.is_authenticated %}
         <h3 class="h1-pos">Hello, <span id="user-username">{{ user.username | truncatechars:21 }}</span>.</h3>
         <p id="get-current-user" style="display: none;">{{ user.username }}</p>
-        {% include 'core/include/messages.html' %}
+        {% include 'include/messages.html' %}
     {% else %}
         <h2 class="h1-pos">Don't have an account yet? <br> <a id="home-to-register-btn" href="{% url 'sign_up' %}">Sign up</a>!</h2>
-        {% include 'core/include/messages.html' %}
+        {% include 'include/messages.html' %}
     {% endif %}
     <h1 class="h1-pos">Last added tracks.</h1>
-    {% include 'core/include/tracks.html' %}
+    {% include 'include/tracks.html' %}
 
 
-    {% include 'core/include/pagination.html' %}
+    {% include 'include/pagination.html' %}
 {% endblock %}
