--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,7 +8,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-        <link href="{% static 'core/css/styles.css' %}" rel="stylesheet">
+        <link href="{% static 'css/styles.css' %}" rel="stylesheet">
         <title>mix-space {% block title %}{% endblock %}</title>
     </head>
     <body>
@@ -73,9 +73,9 @@
         <footer>
             <p><small>Made by <a href="https://github.com/MateuszMasternak" class="github-redirect">Mateusz Masternak</a></small>.</p>
         </footer>
-        <script src="{% static 'core/js/menu.js' %}"></script>
-        <script src="{% static 'core/js/cards.js' %}"></script>
-        <script src="{% static 'core/js/closeMessage.js' %}"></script>
+        <script src="{% static 'js/menu.js' %}"></script>
+        <script src="{% static 'js/cards.js' %}"></script>
+        <script src="{% static 'js/closeMessage.js' %}"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     </body>
 </html>    
